<resources>
    <string name="app_name">AndroidCourse</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="phone_2">Телефон 2</string>
    <string name="email">e-mail</string>
    <string name="email_2">e-mail 2</string>
    <string name="description">description</string>
    <string name="contact_list_bar">Список контактов</string>
    <string name="contact_details_bar">Детали контакта</string>
    <string name="birthday_button">нажми</string>
    <string name="birthday_date">Дата рождения %1$d %2$s</string>
    <string name="birthday_date_is_empty">Дата рождения</string>
    <string name="birthday_button_on">Включить напоминание</string>
    <string name="birthday_button_off">Выключить напоминание</string>
    <string name="channel_name">Channel for birthday notification</string>
    <string name="notification_text">Сегодня день рождения %1$s</string>
    <string name="next_alarm">Напоминание сработает %1$s</string>
    <string name="date_mask">%1$d %2$s %3$d</string>
    <string name="intro_dialog_title">Внимание!</string>
    <string name="intro_dialog_text_message">
        Для корректной работы приложения требуется разрешение доступа к контактам вашего устройства</string>
    <string name="intro_dialog_positive_button">Продолжить</string>
    <string name="permission_choice_dialog_title">Доступ к контактам</string>
    <string name="permission_choice_dialog_text_message">Работа приложения невозможна без получения доступа к контактам </string>
    <string name="permission_choice_dialog_positive_button">Разрешить</string>
    <string name="permission_choice_dialog_negative_button">Выход!</string>
</resources>